--- a/app/src/main/res/layout/game_playview.xml
+++ b/app/src/main/res/layout/game_playview.xml
@@ -10,13 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
         <!-- 정보 표시 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:layout_weight="0.1">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,31 +34,60 @@
         </LinearLayout>
 
         <!-- 화면 구성 -->
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="100dp"
+            android:layout_weight="0.5"
+            android:id="@+id/main_relative">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/lv_plus_view"
-                android:text="+ 1"/>
+                android:text=""/>
+            <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:id="@+id/pigeon_framelayout">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:scaleX="0.3"
+                android:scaleY="0.3"
                 android:id="@+id/pigeon_1"
                 android:src="@drawable/pigeon_1"/>
-
-
         </FrameLayout>
 
+
+
+        </RelativeLayout>
+
+
+        <!-- 기능 버튼 -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.4">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/function_1"
+                    android:text="비둘기력"
+                    />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/function_2"
+                    android:text="친구 소환"/>
+
 
             </LinearLayout>
 
