--- a/app/src/main/res/layout/game_playview.xml
+++ b/app/src/main/res/layout/game_playview.xml
@@ -28,6 +28,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lv_text"
                 android:text=" 0 lv"/>
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/name"/>
 
 
 
@@ -45,19 +49,58 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lv_plus_view"
                 android:text=""/>
+
             <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:id="@+id/pigeon_framelayout">
-            <ImageView
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.3"
+                    android:scaleY="0.3"
+                    android:id="@+id/pigeon_1"
+                    android:src="@drawable/pigeon_1"/>
+            </FrameLayout>
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleX="0.3"
-                android:scaleY="0.3"
-                android:id="@+id/pigeon_1"
-                android:src="@drawable/pigeon_1"/>
-        </FrameLayout>
-
+                android:layout_height="200dp"
+                android:id="@+id/pigeon_framelayout2"
+                android:visibility="invisible">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.3"
+                    android:scaleY="0.3"
+                    android:id="@+id/pigeon_2"
+                    android:src="@drawable/pigeon_1"/>
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:id="@+id/pigeon_framelayout3"
+                android:visibility="invisible">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.3"
+                    android:scaleY="0.3"
+                    android:id="@+id/pigeon_3"
+                    android:src="@drawable/pigeon_1"/>
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:id="@+id/pigeon_framelayout4"
+                android:visibility="invisible">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.3"
+                    android:scaleY="0.3"
+                    android:id="@+id/pigeon_4"
+                    android:src="@drawable/pigeon_1"/>
+            </FrameLayout>
 
 
         </RelativeLayout>
@@ -65,10 +108,17 @@
 
         <!-- 기능 버튼 -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="0.4">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/function_title"
+                android:text="기능 버튼"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,12 +130,14 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/function_1"
                     android:text="비둘기력"
+                    android:layout_weight="0.5"
                     />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/function_2"
+                    android:layout_weight="0.5"
                     android:text="친구 소환"/>
 
 
