--- a/app/src/main/res/layout/game_playview.xml
+++ b/app/src/main/res/layout/game_playview.xml
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <!-- 화면 구성 -->
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_weight="0.5"
@@ -101,9 +101,33 @@
                     android:id="@+id/pigeon_4"
                     android:src="@drawable/pigeon_1"/>
             </FrameLayout>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:id="@+id/enemey_framelayout1"
+                android:visibility="visible"
+                android:layout_gravity="right|center_vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="200px"
+                        android:layout_height="wrap_content"
+                        android:text=" 체력 "
+                        android:background="@color/colorAccent"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleX="0.3"
+                        android:scaleY="0.3"
+                        android:id="@+id/enemey1"
+                        android:src="@drawable/pigeon_1"/>
+                </LinearLayout>
+            </FrameLayout>
 
 
-        </RelativeLayout>
+        </FrameLayout>
 
 
         <!-- 기능 버튼 -->
