--- a/app/src/main/res/layout/game_playview.xml
+++ b/app/src/main/res/layout/game_playview.xml
@@ -51,38 +51,39 @@
                 android:text=""/>
 
             <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:id="@+id/pigeon_framelayout">
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/pigeon_framelayout">
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:scaleX="0.3"
                     android:scaleY="0.3"
                     android:id="@+id/pigeon_1"
                     android:src="@drawable/pigeon_1"/>
             </FrameLayout>
             <FrameLayout
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:id="@+id/pigeon_framelayout2"
                 android:visibility="invisible">
+
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:scaleX="0.3"
                     android:scaleY="0.3"
                     android:id="@+id/pigeon_2"
                     android:src="@drawable/pigeon_1"/>
             </FrameLayout>
             <FrameLayout
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:id="@+id/pigeon_framelayout3"
                 android:visibility="invisible">
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:scaleX="0.3"
                     android:scaleY="0.3"
                     android:id="@+id/pigeon_3"
@@ -93,6 +94,11 @@
                 android:layout_height="200dp"
                 android:id="@+id/pigeon_framelayout4"
                 android:visibility="invisible">
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:text=" 체력 "
+                    android:background="@color/colorAccent"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -102,27 +108,40 @@
                     android:src="@drawable/pigeon_1"/>
             </FrameLayout>
             <FrameLayout
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:id="@+id/enemey_framelayout1"
                 android:visibility="visible"
                 android:layout_gravity="right|center_vertical">
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="200dp"
                     android:orientation="vertical">
                     <TextView
-                        android:layout_width="200px"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text=" 체력 "
+                        android:id="@+id/enemey_health"
                         android:background="@color/colorAccent"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
+                        android:text=""
+                        android:id="@+id/enemey_level"
+                        />
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:id="@+id/enemey_name"/>
+                    <ImageView
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
                         android:scaleX="0.3"
                         android:scaleY="0.3"
-                        android:id="@+id/enemey1"
+                        android:id="@+id/enemey_image"
                         android:src="@drawable/pigeon_1"/>
+
                 </LinearLayout>
             </FrameLayout>
 
